alter div visibility with buttom

--- a/index.html
+++ b/index.html
@@ -5,28 +5,34 @@
     <title>Jquery Study</title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="main.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
     <div class="page-header text-center">
         <h1>Study Jquery</h1>
     </div>
     <div class="container text-center">
-        <button id="obj1" class="btn btn-warning" type="button" name="button">Obj1</button>
-        <button id="obj2" class="btn btn-info" type="button" name="button">obj2</button>
-        <button id="obj3" class="btn btn-danger" type="button" name="button">obj3</button>
+        <button id="obj1" class="btn btn-warning">Obj1</button>
+        <button id="obj2" class="btn btn-info">obj2</button>
+        <button id="obj3" class="btn btn-danger">obj3</button>
+        <button id="showAll" class="btn btn-default">Show All</button>
+        <button id="hideAll" class="btn btn-default">Hide All</button>
     </div>
 
     <div class="container text-center">
         <div id="div-obj1" class="col-md-4">
-            <h1>Obj1</h1>
+            <h3>Obj1</h3>
+            <p>Object 1 Content</p>
         </div>
         <div id="div-obj2" class="col-md-4">
-            <h1>Obj2</h1>
+            <h3>Obj2</h3>
+            <p>Object 2 Content</p>
         </div>
         <div id="div-obj3" class="col-md-4">
-            <h1>Obj3</h1>
+            <h3>Obj3</h3>
+            <p>Object 3 Content</p>
         </div>
     </div>
 </body>
